--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,10 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx5G
-org.gradle.daemon=false
+-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5010
+-XXaltjvm=dcevm
+-XX:+UnlockExperimentalVMOptions
+-javaagent:C:\\Users\\minemobs\\Downloads\\api\\hotswap-agent-1.4.2-SNAPSHOT.jar"org.gradle.daemon=false
 mc_version=1.15.2
 jei_version=6.0.2.12
 top_version=1.15:1.15-2.0.0-3
