--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,10 @@ repositories {
         url = "http://dvs1.progwml6.com/files/maven"
     }
     maven {
+        name = "repsy"
+        url = "https://repo.repsy.io/mvn/gandiber/geckolib"
+    }
+    maven {
         // location of a maven mirror for JEI files, as a fallback
         name = "ModMaven"
         url = "modmaven.k-4u.nl"
@@ -114,6 +118,10 @@ dependencies {
     compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api")
     // at runtime, use the full JEI jar
     runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}")
+
+    compile fg.deobf("team.chisel.ctm:CTM:MC${mc_version}-${ctm_version}")
+
+    implementation fg.deobf('software.bernie.geckolib:forge-1.15.2-geckolib:2.0.0')
 
     compile fg.deobf(project.dependencies.create("mcjty.theoneprobe:TheOneProbe-${top_version}") {
         transitive = false
