--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,25 @@ buildscript {
         maven { url = 'https://files.minecraftforge.net/maven' }
         jcenter()
         mavenCentral()
+        maven {
+            // location of the maven that hosts JEI files
+            name = "Progwml6 maven"
+            url = "http://dvs1.progwml6.com/files/maven"
+        }
+        maven {
+            name = "repsy"
+            url = "https://repo.repsy.io/mvn/gandiber/geckolib"
+        }
+        maven {
+            // location of the maven that hosts JEI files
+            name = "Progwml6 maven"
+            url = "https://dvs1.progwml6.com/files/maven/"
+        }
+        maven {
+            // location of a maven mirror for JEI files, as a fallback
+            name = "ModMaven"
+            url = "https://modmaven.k-4u.nl"
+        }
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
@@ -84,27 +103,6 @@ minecraft {
                 }
             }
         }
-    }
-}
-
-repositories {
-    maven {
-        // location of the maven that hosts JEI files
-        name = "Progwml6 maven"
-        url = "http://dvs1.progwml6.com/files/maven"
-    }
-    maven {
-        name = "repsy"
-        url = "https://repo.repsy.io/mvn/gandiber/geckolib"
-    }
-    maven {
-        // location of a maven mirror for JEI files, as a fallback
-        name = "ModMaven"
-        url = "modmaven.k-4u.nl"
-    }
-    maven { // TOP
-        name 'tterrag maven'
-        url "http://maven.tterrag.com/"
     }
 }
 
