--- a/build.gradle
+++ b/build.gradle
@@ -98,11 +98,6 @@ repositories {
         url = "https://repo.repsy.io/mvn/gandiber/geckolib"
     }
     maven {
-        // location of the maven that hosts JEI files
-        name = "Progwml6 maven"
-        url = "https://dvs1.progwml6.com/files/maven/"
-    }
-    maven {
         // location of a maven mirror for JEI files, as a fallback
         name = "ModMaven"
         url = "http://modmaven.k-4u.nl"
@@ -111,6 +106,10 @@ repositories {
         // new loc of a maven mirror for jei files, as a fallback
         name = "ModsMaven"
         url = "https://modmaven.dev"
+    }
+    maven { // TOP
+        name 'tterrag maven'
+        url "https://maven.tterrag.com/"
     }
 }
 
